# haskellOps

./: .gitignore  .gitmodules  README.md  haskellops  haskellops.hs  make.cabal  todo.md
src/: Haskellops.hs  TemplatePredicate.hs
